0.44

- Using Time::y2038 instead of Time::Local lets us handle epochs up to
  142 million years before and after the Unix epoch.

- Fixed a compiler warning with Perl 5.10.0.


0.4305 2008-10-03

- The pure Perl version of this module did not know about the end of
  2008 leap second. Reported by James T Monty.


0.4304 2008-07-13

- Fix test failures when tests are run with DateTime::Locale
  0.41. Reported by David Cantrell via CPAN Testers.


0.4303 2008-07-12

- There is a new leap second coming at the end of 2008.


0.4302 2008-05-20

[ BUG FIXES ]

- The 41cldr_format.t test blew up on Perl 5.6.x, because of a bug in
  the test code.


0.4301 2008-05-18

[ BUG FIXES ]

- In the 0.43 release, I forgot to change the DateTime::Locale
  dependency to require DT::Locale 0.40.


0.43   2008-05-18

[ *** BACKWARDS INCOMPATIBILITIES *** ]

* Dropped support for Perl 5.005.

[ ENHANCEMENTS ]

- Added support for formatting the CLDR date pattern language, which
  is much more powerful than strftime. This, combined with the latest
  DateTime::Locale, makes the localized output much more correct.

[ BUG FIXES ]

- The hour_1() method was returning the real hour + 1, rather than
  just representing midnight as 24 instead of 0. This bug fix will
  probably break someone's code.


0.42   2008-02-29

[ BUG FIXES ]

- The 17set_return.t tests failed on leap days, like today. Reported
  by Duncan Ferguson. RT #33695.


0.41   2007-09-10

[ BUG FIXES ]

- The 13strftime.t test was failing when DateTime::Locale 0.35 was
  installed. The test has been adjusted and we now list DT::Locale
  0.35 as the minimum version. Reported by David Cantrell.


0.40   2007-08-30

[ BUG FIXES ]

- A custom formatter would be lost after a call to set() or
  truncate(). Reported by Kjell-Magne Øierud. RT #28728.

- The truncate() method docs said it accepted "second" as a parameter,
  but it didn't actually do the right thing with it. Now it always